testdata/golden/sema/invalid/array_view_resize.fmt
// Array views are not resizable: push/pop/reserve are rejected.
fn push_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    v.push(4);
}

fn pop_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    let _ = v.pop();
}

fn reserve_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    v.reserve(10:uint);
}

fn array_push_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    array_push(&mut v, 5);
}

fn array_pop_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    let _ = array_pop(&mut v);
}

fn array_reserve_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    array_reserve(&mut v, 8:uint);
}

fn rt_array_push_view() -> nothing {
    let mut a: int[] = [1, 2, 3];
    let mut v = a[[1..3]];
    rt_array_push(&mut v, 6);
}

fn append_string_view() -> nothing {
    let mut a: byte[] = [65:byte, 66:byte, 67:byte];
    let mut v = a[[1..3]];
    v.append_string(&"x");
}

fn append_bytes_view_view() -> nothing {
    let mut a: byte[] = [65:byte, 66:byte, 67:byte];
    let mut v = a[[1..3]];
    let s: string = "x";
    let bytes = s.bytes();
    v.append_bytes_view(&bytes);
}

fn rt_array_append_raw_bytes_view() -> nothing {
    let mut a: byte[] = [65:byte, 66:byte, 67:byte];
    let mut v = a[[1..3]];
    let s: string = "x";
    rt_array_append_raw_bytes(&mut v, rt_string_ptr(&s), 1:uint64);
}
